Individual responses parsed, scored and accessible on the frontend
